Fixed 3d window position and photo marker zoom bug on mobile platforms

--- a/HTML_SRC/style_light.css
+++ b/HTML_SRC/style_light.css
@@ -1145,3 +1145,7 @@ input[type=range] {
     width: 100px;
     height: auto;
 }
+
+.leaflet-middle.leaflet-center {
+    z-index: 800;
+}
